# anira-web

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  setup_anira.sh  setup_emscripten.sh
.github/workflows/: build.yml
cmake/: BuildBenchmarks.cmake  BuildWrappers.cmake  DetectEmscripten.cmake  SetupAnira.cmake
js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
js/anira-web/: package.json  tsconfig.json  vite.config.ts
js/anira-web-benchmarks/: package.json  vite.config.ts
js/anira-web-benchmarks/src/: index.ts
js/anira-web/src/: index.ts
js/demo/: benchmark.html  demo.html  index.html  package.json  vite.config.ts
js/demo/public/: style.css
js/demo/src/: benchmarks.ts  usageExample.ts  utils.ts
src/: audio_worklet.cpp
src/benchmarks/: benchmark.cpp
src/benchmarks/model_configs/cnn/: CNNConfig.h
src/benchmarks/model_configs/hybrid-nn/: HybridNNConfig.h
src/wrappers/: InferenceConfig.cpp  InferenceHandler.cpp  PrePostProcessor.cpp  vectors.cpp
src/wrappers/utils/: Buffer.cpp  HostConfig.cpp  InferenceBackend.cpp  RingBuffer.cpp
